--- a/blocks/category-nav/category-nav.css
+++ b/blocks/category-nav/category-nav.css
@@ -20,7 +20,7 @@
 .tabs-pane-js {
   max-width: 1440px;
   position: relative;
-  left: 70px;
+  margin: 0 auto;
   box-sizing: border-box;
 }
 
@@ -310,13 +310,13 @@
 }
 
 /* Mobile Responsiveness */
-@media (width < 900px) {
+@media (width < 990px) {
   .category-nav-wrapper {
     display: none;
   }
 }
 
-@media (width >= 900px) and (width < 1200px) {
+@media (width >= 990px) and (width < 1200px) {
   .category-nav-dropdown {
     min-width: 720px;
     max-width: 720px;
@@ -331,7 +331,7 @@
   }
 
   .tabs-pane-js {
-    padding: 0 24px;
+    padding: 0;
   }
 }
 
