--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -79,11 +79,11 @@
 /* Button groups wrapper */
 .hero .button-groups-wrapper {
   display: flex;
-  flex-direction: row;
-  gap: 16px;
+  flex-direction: column;
   margin-bottom: 32px;
   align-items: center;
   width: 90%;
+  gap: 12px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -92,15 +92,16 @@
 .hero .button-group {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 10px;
   text-align: center;
   width: auto;
   flex: 1;
+  align-items: center;
 }
 
 .hero .button-group p {
   margin: 0;
-  font-size: 10px;
+  font-size: 12px;
   line-height: 1.3;
 }
 
@@ -248,6 +249,7 @@
   .hero .button-group {
     width: 67%;
     text-align: left;
+    margin-bottom: 24px;
     flex: 0 0 auto;
   }
 
