--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -80,7 +80,7 @@
 .hero .button-groups-wrapper {
   display: flex;
   flex-direction: column;
-  margin-bottom: 62px;
+  margin-bottom: 40px;
   align-items: center;
   width: 90%;
   gap: 24px;
@@ -103,6 +103,13 @@
   margin: 0;
   font-size: 12px;
   line-height: 1.3;
+  text-align: center;
+}
+
+.hero .button-group p sup {
+  font-size: 12px;
+  vertical-align: super;
+  line-height: 0;
 }
 
 /* Button container styling */
@@ -256,8 +263,15 @@
   .hero .button-group p {
     font-size: 14px;
     line-height: 1.4;
-    margin: 0 auto;
+    margin: 0;
+    text-align: left;
   }
+
+.hero .button-group p sup {
+  font-size: 14px;
+  vertical-align: super;
+  line-height: 0;
+}
 
   .hero .button {
     display: inline-flex;
