--- a/blocks/category-nav/category-nav.css
+++ b/blocks/category-nav/category-nav.css
@@ -167,7 +167,7 @@
 
 .category-nav-card .category-nav-card-link {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   position: relative;
   padding: 12px 14px 14px;
   border-radius: 8px;
@@ -320,7 +320,7 @@ header nav .nav-sections .nav-fragment-section-content .category-nav-explore-lin
 
 .nav-fragment-content .category-nav-card .category-nav-tags {
   position: relative;
-  display: inline-block;
+  display: flex;
   width: fit-content;
   margin-left: 11px;
   top: unset;
