--- a/blocks/steps/steps.css
+++ b/blocks/steps/steps.css
@@ -34,6 +34,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 40px;
+  max-width: 80%;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -154,8 +155,9 @@
   line-height: normal;
 }
 
-.upi-steps-red-bg .grid-steps{
+.upi-steps-red-bg .grid-steps {
   gap: 24px;
+  max-width: 100%;
 }
 
 /* ===== TABLET (600px - 899px) ===== */
