--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -514,6 +514,10 @@ footer .footer>div .section>div {
     padding: 0;
   }
 
+  .footer .section.accordion-container:first-child .accordion.block {
+    margin-bottom: 0;
+  }
+
   .footer>div>div:nth-child(3) {
     padding: 0;
     order: 2;
@@ -548,6 +552,10 @@ footer .footer>div .section>div {
     align-items: center;
     flex-direction: column;
     text-align: center;
+  }
+
+  .footer .section:nth-child(3) {
+    margin: 0;
   }
 
   .footer>div>div:nth-child(2)>div>ul>li {
