--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -544,7 +544,7 @@ footer .footer>div .section>div {
   }
 
   footer .footer>div .section:nth-child(4) {
-    padding: 50px 0;
+    padding: 50px 0 110px 0;
     order: 4;
   }
 
