Hide CTA popup at wide width

--- a/templates/mayura/mayura.css
+++ b/templates/mayura/mayura.css
@@ -96,3 +96,9 @@ color: var(--dark-red-color);
       }
     }
   }
+
+  @media (width >= 990px) {
+    .mayura .sticky-cta-container {
+      display: none;
+    }
+  }
